--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,5 @@
+css
+
 * {
   margin: 0;
   padding: 0;
@@ -107,6 +109,7 @@ form button:hover {
   .container {
     width: 95%;
   }
+}
 
   #portfolio .portfolio-items {
     grid-template-columns: 1fr;
