--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,29 @@
 .main-nav {
-    text-align: center;
-    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #333;
+    padding: 10px;
+    flex-wrap: wrap;
 }
 
 .main-nav a {
-    margin: 0 12px;
-    color: #333;
-    font-weight: 600;
+    color: white;
+    padding: 10px 15px;
     text-decoration: none;
 }
 
 .main-nav a:hover {
-    background-color: #f9f9f9;
-    text-align: center;
-    padding: 60px 0 20px;
+    background-color: #555;
+}
+
+/* Mobile View */
+@media (max-width:768px) {
+    .main-nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .main-nav a {
+        width: 100%
+    }
 }
