--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,13 @@
     display: flex;
     justify-content: space-between;
     background-color: #333;
-    padding: 10px;
+    padding: 10px 20px;
     flex-wrap: wrap;
 }
 
 .main-nav a {
     color: white;
-    padding: 10px 15px;
+    padding: 10px;
     text-decoration: none;
 }
 
@@ -25,5 +25,6 @@
 
     .main-nav a {
         width: 100%
+        border-top: 1px solid #444;
     }
 }
